# aioredis-cluster

./: .editorconfig  .gitignore  CHANGES.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
benchmarks/: cluster_async.py
benchmarks/clients/: cluster_async.py  requirements.txt
benchmarks/clients2/: bench.py  requirements.in
benchmarks/cythonize/: __init__.py  crc.py  ensure_bytes.py
dev/: test_cluster_failover.py  test_connection_lost.py  test_pool_recovery.py  test_pubsub_reshard.py
etc/redis/: Dockerfile  redis-cluster.tmpl
src/aioredis_cluster/: __init__.py  abc.py  cluster.py  cluster_state.py  command_exec.py  connection.py  crc.py  errors.py  errors.pyi  factory.py  log.py  manager.py  pool.py  pool_factory.py  pooler.py  pubsub.py  resource_lock.py  structs.py  typedef.py  util.py
src/aioredis_cluster/_aioredis/: __init__.py  abc.py  connection.py  errors.py  log.py  parser.py  pool.py  pubsub.py  stream.py  util.py
src/aioredis_cluster/_aioredis/commands/: __init__.py  geo.py  hyperloglog.py  pubsub.py  transaction.py
src/aioredis_cluster/_aioredis/sentinel/: commands.py  pool.py
src/aioredis_cluster/aioredis/: __init__.py  _errors.py  abc.py  connection.py  errors.py  parser.py  pool.py  stream.py  util.py
src/aioredis_cluster/aioredis/commands/: __init__.py  cluster.py  generic.py  hash.py  list.py  server.py  set.py  streams.py  string.py
src/aioredis_cluster/aioredis/sentinel/: pool.py
src/aioredis_cluster/command_info/: __init__.py  commands.py
src/aioredis_cluster/commands/: __init__.py  cluster.py  commands.py  custom.py  sharded_pubsub.py
src/aioredis_cluster/compat/: asyncio.py
src/aioredis_cluster/speedup/: crc.pyx  ensure_bytes.pyx
tests/aioredis_tests/: _testutils.py  coerced_keys_dict_test.py  conftest.py  connection_commands_test.py  connection_test.py  encode_command_test.py  errors_test.py  generic_commands_test.py  geo_commands_test.py  hash_commands_test.py  hyperloglog_commands_test.py  integration_test.py  list_commands_test.py  multi_exec_test.py  parse_url_test.py  pool_test.py  pubsub_commands_test.py  pubsub_receiver_test.py  pyreader_test.py  scripting_commands_test.py  sentinel_commands_test.py  sentinel_failover_test.py  server_commands_test.py  set_commands_test.py  sorted_set_commands_test.py  ssl_test.py  stream_commands_test.py  stream_test.py  string_commands_test.py  task_cancellation_test.py  transaction_commands_test.py
tests/system_tests/: conftest.py  test_cluster.py  test_connection_pubsub.py  test_creation.py  test_redis_cluster.py
tests/unit_tests/aioredis_cluster/: conftest.py  test_aioredis.py  test_cluster.py  test_command_info.py  test_connection_pubsub.py  test_errors.py  test_factory.py  test_pool.py  test_pooler.py  test_pubsub.py  test_resource_lock.py  test_util.py
tests/unit_tests/aioredis_cluster/commands/: test_commands.py  test_custom.py  test_util.py
tests/unit_tests/aioredis_cluster/manager/: _cluster_slots.py  test_cluster_state.py  test_manager.py
