[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
known_first_party = ["actions_in_fly"]
known_third_party = []
lines_after_imports = 2
multi_line_output = 5
skip = "__main__.py"
include_trailing_comma = true

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38"]
exclude = '.pyi$'
