[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
known_first_party = ["aioredis_cluster"]
known_third_party = ["aioredis"]
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 100
target-version = ["py36", "py37", "py38"]
exclude = '.pyi$'
