[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aioredis-cluster"
description = "Redis Cluster support extension for aioredis"
authors = [
    {name = "Anton Ilyushenkov", email = "ilyushenkov@corp.mail.ru"},
]
maintainers = [
    {name = "Anton Ilyushenkov", email = "ilyushenkov@corp.mail.ru"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]
keywords = ["redis", "aioredis", "redis cluster", "asyncio"]
requires-python = ">=3.8"
dependencies = [
    'async-timeout',
    "hiredis < 3.0.0; platform_python_implementation == 'CPython'"
]
dynamic = ["version", "readme"]

[project.urls]
Repository = "https://github.com/DriverX/aioredis-cluster"

[project.optional-dependencies]
devel = [
    "flake8",
    "flake8-pyproject",
    "mypy",
    "isort",
    "black==23.7.0",
    "coverage",
    "cython",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio>=0.21, <1.0",
    "pytest-cov",
    "pytest-xdist",
]
aioredis = [
    "aioredis >=1.1.0, <1.4.0; python_version < '3.10'",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = ["POSIX"]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "aioredis_cluster._version.__version__"}
readme = {file = ["README.md", "CHANGES.md", "CONTRIBUTORS.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "aioredis_cluster",
    "aioredis_cluster.*",
]

[tool.isort]
profile = "black"
known_first_party = ["aioredis_cluster"]
known_third_party = ["aioredis"]

[tool.black]
line-length = 100
target-version = ["py38"]
exclude = '.pyi$'

[tool.pytest.ini_options]
addopts = "--cov-report=term --cov-report=html -v"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["W606", "E203", "E741"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "aioredis_cluster._aioredis.*"
ignore_errors = true
