[metadata]
name = aioredis-cluster
version = attr: aioredis_cluster._version.__version__
description = Redis Cluster support extension for aioredis
long_description = file: README.md, CHANGES.md, CONTRIBUTORS.md
long_description_content_type = text/markdown
url = https://github.com/DriverX/aioredis-cluster
author = Anton Ilyushenkov
author_email = ilyushenkov@corp.mail.ru
maintainer = Anton Ilyushenkov
maintainer_email = ilyushenkov@corp.mail.ru
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Operating System :: POSIX
    Environment :: Web Environment
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Framework :: AsyncIO
license = MIT
platforms = POSIX
keywords = redis, aioredis, redis cluster

[options]
packages = find:
package_dir =
    =src
install_requires =
    async-timeout
    hiredis < 3.0.0; platform_python_implementation == "CPython"
python_requires = >=3.8, <4
zip_safe = False
include_package_data = True

[options.packages.find]
where = src
include =
    aioredis_cluster
    aioredis_cluster.*

[options.extras_require]
devel =
    flake8
    mypy
    isort
    mock>=4.0.0
    black==22.12.0
    coverage
    cython
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio>=0.18,<0.21
    pytest-cov
    pytest-xdist
    types-mock
aioredis =
    aioredis >=1.1.0, <1.4.0; python_version < '3.10'

[tool:pytest]
minversion = 2.9.1
addopts = --cov-report=term --cov-report=html -v
asyncio_mode = auto

[coverage:run]
branch = true
source = aioredis_cluster,tests/unit_tests

[flake8]
max_line_length = 100
extend_ignore = W606, E203, E741

[mypy]
ignore_missing_imports = True
check_untyped_defs = True
no_implicit_optional = False

[mypy-aioredis_cluster._aioredis.*]
ignore_errors = True
